versioned_docs/version-5.8.0/api/2_capi/identity/refreshidentity.md
# RefreshIdentity

Refreshes an identity for this player

<PartialServop service_name="identity" operation_name="REFRESH_IDENTITY" />

## Method Parameters

| Parameter           | Description                   |
| ------------------- | ----------------------------- |
| externalId          | User ID                       |
| authenticationToken | Password or client side token |
| authenticationType  | Type of authentication        |

## Usage

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="csharp" label="C#">
```

```csharp
string externalId = "846557642688";
string authenticationToken = "ghbiuhgvbiuhbiunbuibgin";
string authenticationType = "Facebook";
SuccessCallback successCallback = (response, cbObject) =>
{
    Debug.Log(string.Format("Success | {0}", response));
};
FailureCallback failureCallback = (status, code, error, cbObject) =>
{
    Debug.Log(string.Format("Failed | {0}  {1}  {2}", status, code, error));
};

<%= data.branding.codePrefix %>.IdentityService.RefreshIdentity(externalId, authenticationToken, authenticationType, successCallback, failureCallback);
```

```mdx-code-block
</TabItem>
<TabItem value="cpp" label="C++">
```

```cpp
const char *externalId = "846557642688";
const char *authenticationToken = "ghbiuhgvbiuhbiunbuibgin";
const char *authenticationType = "Facebook";
<%= data.branding.codePrefix %>->getIdentityService()->refreshIdentity(externalId, authenticationToken, authenticationType, this);
```

```mdx-code-block
</TabItem>
<TabItem value="objectivec" label="Objective-C">
```

```objectivec
NSString *externalId = @"846557642688";
NSString *authenticationToken = @"ghbiuhgvbiuhbiunbuibgin";
NSString *authenticationType = @"Facebook";
BCCompletionBlock successBlock;      // define callback
BCErrorCompletionBlock failureBlock; // define callback

[[<%= data.branding.codePrefix %> identityService] refreshIdentity:externalId
        authenticationToken:authenticationToken
         authenticationType:authenticationType
            completionBlock:successBlock
       errorCompletionBlock:failureBlock
                   cbObject:nil];
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
String externalId = "846557642688";
String authenticationToken = "ghbiuhgvbiuhbiunbuibgin";
String authenticationType = "Facebook";
this; // implements IServerCallback

<%= data.branding.codePrefix %>.getIdentityService().refreshIdentity(externalId, authenticationToken, authenticationType, this);

public void serverCallback(ServiceName serviceName, ServiceOperation serviceOperation, JSONObject jsonData)
{
    System.out.print(String.format("Success | %s", jsonData.toString()));
}
public void serverError(ServiceName serviceName, ServiceOperation serviceOperation, int statusCode, int reasonCode, String jsonError)
{
    System.out.print(String.format("Failed | %d %d %s", statusCode,  reasonCode, jsonError.toString()));
}
```

```mdx-code-block
</TabItem>
<TabItem value="js" label="JavaScript">
```

```javascript
var externalId = "846557642688";
var authenticationToken = "ghbiuhgvbiuhbiunbuibgin";
var authenticationType = "Facebook";

<%= data.branding.codePrefix %>.identity.refreshIdentity(externalId, authenticationToken, authenticationType, result =>
{
	var status = result.status;
	console.log(status + " : " + JSON.stringify(result, null, 2));
});
```

```mdx-code-block
</TabItem>
<TabItem value="dart" label="Dart">
```

```dart
var  externalId = "846557642688";
var  authenticationToken = "ghbiuhgvbiuhbiunbuibgin";
var  authenticationType = AuthenticationType.facebook;

ServerResponse result = await <%= data.branding.codePrefix %>.identityService.refreshIdentity(externalId:externalId, authenticationToken:authenticationToken, authenticationType:authenticationType);

if (result.statusCode == 200) {
    print("Success");
} else {
    print("Failed ${result.error['status_message'] ?? result.error}");
}
```

```mdx-code-block
</TabItem>
<TabItem value="cfs" label="Cloud Code">
```

```cfscript
var externalId = "846557642688";
var authenticationToken = "ghbiuhgvbiuhbiunbuibgin";
var authenticationType = "Facebook";
var identityProxy = bridge.getIdentityServiceProxy();

var postResult = identityProxy.refreshIdentity(externalId, authenticationToken, authenticationType);
if (postResult.status == 200) {
    // Success!
}
```

```mdx-code-block
</TabItem>
<TabItem value="r" label="Raw">
```

```r
{
	"service": "identity",
	"operation": "REFRESH_IDENTITY",
	"data": {
		"externalId": "846557642688",
		"authenticationToken": "ghbiuhgvbiuhbiunbuibgin",
		"authenticationType": "Facebook"
	}
}
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```

<details>
<summary>JSON Response</summary>

```json
{
    "status": 200,
    "data": {
        "externalId": "758945465505",
        "authenticationType": "Facebook"
    }
}
```

</details>
